--- a/src/App.css
+++ b/src/App.css
@@ -43,4 +43,28 @@
   font-weight: 400;
   font-style: italic;
 }
+.head {
+  opacity: 0;
+  transition: all 1s ease-in-out;
+  filter: blur(5px);
+  transform: scale(0);
+}
+.showhead {
+  opacity: 1;
+  filter: blur(0);
+  transform: scale(1);
+  transition: all 1.5s ease-in-out;
+}
 
+.text {
+  opacity: 0;
+  transition: all 1s ease-in-out;
+  filter: blur(5px);
+  transform: translateY(100px);
+}
+.showtext {
+  opacity: 1;
+  filter: blur(0);
+  transform: translateY(0);
+  transition: all 1s ease-in-out;
+}
