--- a/src/App.css
+++ b/src/App.css
@@ -43,13 +43,13 @@
   font-weight: 400;
   font-style: italic;
 }
-.head {
+.fade {
   opacity: 0;
   transition: all 1s ease-in-out;
   filter: blur(5px);
   transform: scale(0);
 }
-.showhead {
+.showFade {
   opacity: 1;
   filter: blur(0);
   transform: scale(1);
