--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   font-weight: 500;
   font-style: normal;
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 .heroImage {
   background-image: url("/src/assets/images/heroServe.jpg");
