--- a/src/App.css
+++ b/src/App.css
@@ -69,3 +69,22 @@
   transform: translateY(0);
   transition: all 1s ease-in-out;
 }
+.no {
+  opacity: 0;
+  transition: all 1s;
+  filter: blur(5px);
+  transform: translateY(100%);
+}
+.nav {
+  z-index: 2;
+}
+.show {
+  opacity: 1;
+  filter: blur(0);
+  transform: translateY(0);
+  transition: all 1s ease-in-out;
+}
+.overlay-Dark {
+  background-color: #000009;
+  opacity: 0.5;
+}
