--- a/src/App.css
+++ b/src/App.css
@@ -2,72 +2,16 @@
   max-width: 1500px;
   margin: 0 auto;
   text-align: center;
-  font-family: "Raleway", sans-serif;
+  font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
   font-weight: 500;
   font-style: normal;
-  overflow-x: hidden;
   scroll-behavior: smooth;
-}
-.heroImage {
-  background-image: url("/src/assets/images/heroServe.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-.inAppImage {
-  background-image: url("/src/assets/images/inApp.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-.aboutImage {
-  background-image: url("/src/assets/images/aboutImage.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-.aboutLastImage {
-  background-image: url("/src/assets/images/aboutLastImage.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-.packagesImage {
-  background-image: url("/src/assets/images/packagesImage.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-.contactImage {
-  background-image: url("/src/assets/images/contactImage.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 .headingFont {
   font-family: "Archivo Black", sans-serif;
   font-weight: 400;
   font-style: italic;
-}
-.fade {
-  opacity: 0;
-  transition: all 1s ease-in-out;
-  filter: blur(5px);
-  transform: scale(0);
-}
-.showFade {
-  opacity: 1;
-  filter: blur(0);
-  transform: scale(1);
-  transition: all 1.5s ease-in-out;
-}
-
-.text {
-  opacity: 0;
-  transition: all 1s ease-in-out;
-  filter: blur(5px);
-  transform: translateY(100px);
-}
-.showtext {
-  opacity: 1;
-  filter: blur(0);
-  transform: translateY(0);
-  transition: all 1s ease-in-out;
 }
 .no {
   opacity: 0;
@@ -87,4 +31,60 @@
 .overlay-Dark {
   background-color: #000009;
   opacity: 0.5;
+}
+.skill-slider {
+  width: 80%;
+  margin: 0 auto;
+  position: relative;
+}
+
+.slider {
+  height: 50px;
+  margin: auto;
+  position: relative;
+  width: 100%;
+  display: grid;
+  place-items: center;
+  overflow: hidden;
+}
+.slide-track {
+  display: flex;
+  width: calc(250px * 8);
+  animation: scroll 40s linear infinite;
+}
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(calc(-250px * 4));
+  }
+}
+.slide-track:hover {
+  animation-play-state: paused;
+}
+.slide {
+  /* height: 200px; */
+  width: 250px;
+  display: flex;
+  align-items: center;
+  padding: 15px;
+  perspective: 100px;
+}
+.slider::before,
+.slider::after {
+  content: "";
+  height: 100%;
+  position: absolute;
+  width: 15%;
+  z-index: 2;
+}
+.slider::before {
+  left: 0;
+  top: 0;
+}
+.slider::after {
+  right: 0;
+  top: 0;
+  transform: rotateZ(180deg);
 }
