--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   font-weight: 500;
   font-style: normal;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 .headingFont {
   font-family: "Archivo Black", sans-serif;
@@ -42,7 +43,6 @@
   height: 50px;
   margin: auto;
   position: relative;
-  width: 100%;
   display: grid;
   place-items: center;
   overflow: hidden;
